--- a/academics.html
+++ b/academics.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="navbar navbar-dark navbar-color shadow-sm">
             <div class="container d-flex justify-content-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
                     <svg width="2em" height="1em" viewBox="0 0 16 16" class="bi bi-book-half" fill="currentColor"
@@ -42,46 +42,73 @@
         </div>
     </header>
 
+    <div class="container">
+
+        <div class="row">
+            <div class="card card-image academic-card shadow-sm">
+                <div class="text-black text-left d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div>
+                        <h3 class="card-title pt-2"><strong>JavaScript Game</strong></h3>
+                        <p>This is the JavaScript game that my friends and I made for our Web Development class. Click
+                            "View Project" to play!</p>
+                        <a class="btn bg-dark text-white" href="/projects/game7/index.html">View project</a>
+                    </div>
+                    <img class="img d-none d-md-block" src="/img/projects/javascript_game.PNG" alt="JS Game">
+                </div>
+            </div>
+        </div>
+
+        <div class="row padded-top">
+            <div class="card card-image academic-card shadow-sm">
+                <div class="text-black text-left d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div>
+                        <h3 class="card-title pt-2"><strong>Clue Game</strong></h3>
+                        <p>My friend and I built the game Clue using Java with a fully integrated GUI. Click "View
+                            Project" to download the ZIP folder containing the game. Open "Instructions to Play" within
+                            the ZIP file to get started.</p>
+                        <a class="btn bg-dark text-white" href="/projects/Clue.zip" download>View project</a>
+                    </div>
+                    <img class="img d-none d-md-block" src="/img/projects/clue.PNG" alt="Clue Game">
+                </div>
+            </div>
+        </div>
+
+        <div class="row padded-top">
+            <div class="card card-image academic-card shadow-sm">
+                <div class="text-black text-left d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div>
+                        <h3 class="card-title pt-2"><strong>QShare Android App</strong></h3>
+                        <p>This is the android app that my team and I built in Mobile App Development in Kotlin. The app
+                            will upload local files to google drive and automatically create a QR code to give others
+                            access to the file. Click "View Source Code" to download the source code for the app.</p>
+                        <a class="btn bg-dark text-white" href="/projects/qshare.zip" download>View project</a>
+                    </div>
+                    <img class="img d-none d-md-block d-none d-md-block" src="/img/projects/qshare.PNG" alt="JS Game">
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <footer class="footer mt-auto py-3">
         <div class="container">
-            <div class="row">
-                
-                <div class="col-md-4 col-sm">
-                    <div class="card mb-4 shadow-sm">
-                        <img class="rounded-top img-fluid" src="/img/javascript_game.PNG" alt="js game" width="100%"
-                            height="225">
-                        <div class="card-body">
-                            <p class="card-text">Various projects throughout my academic career and other academic
-                                achievements in my time at Mines.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a type="button" class="btn btn-sm btn-outline-secondary"
-                                        href="academics.html">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                </div>
+            <span class="text-muted">Built using Bootstrap</span>
+        </div>
+    </footer>
 
-
-
-
-
-
-                <footer class="footer mt-auto py-3">
-                    <div class="container">
-                        <span class="text-muted">Built using Bootstrap</span>
-                    </div>
-                </footer>
-
-                <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-                    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-                    crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-                    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-                    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
 
 </html>
