--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
   <!-- Custom styles for this template -->
   <link href="bootstrap-4.5.2-examples/album/album.css" rel="stylesheet">
+  <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
   <header>
-    <div class="collapse bg-dark" id="navbarHeader">
+    <div class="collapse navbar-color" id="navbarHeader">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
@@ -42,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="navbar navbar-dark navbar-color shadow-sm">
       <div class="container d-flex justify-content-between">
         <a href="#" class="navbar-brand d-flex align-items-center">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-badge" fill="currentColor"
@@ -78,7 +79,8 @@
         <div class="row">
           <div class="col-md-12 col-sm-4">
             <div class="card mb-4 shadow-sm">
-              <img class="rounded-top img-fluid" src="/img/code.PNG" alt="filler code" width="100%" height="225">
+              <img class="rounded-top img-fluid" src="/img/projects/code.PNG" alt="filler code" width="100%"
+                height="225">
               <div class="card-body">
                 <p class="card-text">Various projects throughout my academic career and other academic achievements in
                   my time at Mines.</p>
@@ -92,12 +94,13 @@
           </div>
           <div class="col-md">
             <div class="card mb-4 shadow-sm">
-              <img class="rounded-top  img-fluid" src="/img/nyc_cover.jpg" alt="filler code" width="100%" height="225">
+              <img class="rounded-top  img-fluid" src="/img/projects/nyc_cover.jpg" alt="filler code" width="100%"
+                height="225">
               <div class="card-body">
-                <p class="card-text">Photography and Videography before and during uarantine.</p>
+                <p class="card-text">Photography and Videography before and during quarantine.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="#">Learn More</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="photography.html">Learn More</a>
                   </div>
                 </div>
               </div>
@@ -105,13 +108,11 @@
           </div>
           <div class="col-md">
             <div class="card mb-4 shadow-sm">
-              <img class="rounded-top img-fluid" src="/img/resumesnippet.PNG" alt="filler code" width="100%"
+              <img class="rounded-top img-fluid" src="/img/projects/resumesnippet.PNG" alt="filler code" width="100%"
                 height="225">
               <div class="card-body">
-                <p class="card-text">Career Interests and Resume</p>
                 <div class="btn-group">
-                  <a type="button" class="btn btn-sm btn-outline-secondary" href="#">Learn More</a>
-                  <a type="button" class="btn btn-sm btn-outline-secondary" href="/resume.pdf" download>Download
+                  <a type="button" class="btn btn-sm btn-outline-secondary" href="/projects/resume.pdf" download>Download
                     Resume</a>
                 </div>
               </div>
