--- a/academics.html
+++ b/academics.html
@@ -77,13 +77,15 @@
             <div class="card card-image academic-card shadow-sm">
                 <div class="text-black text-left d-flex align-items-center rgba-black-strong py-5 px-4">
                     <div>
-                        <h3 class="card-title pt-2"><strong>QShare Android App</strong></h3>
+                        <h3 class="card-title pt-2"><strong>QShaRe Android App</strong></h3>
                         <p>This is the android app that my team and I built in Mobile App Development in Kotlin. The app
                             will upload local files to google drive and automatically create a QR code to give others
-                            access to the file. Click "View Source Code" to download the source code for the app.</p>
-                        <a class="btn bg-dark text-white" href="/projects/qshare.zip" download>View project</a>
+                            access to the file. Click "View Project" to download the app from the Google Play Store.</p>
+                        <a class="btn bg-dark text-white"
+                            href="https://play.google.com/store/apps/details?id=com.fourdudes.qshare&hl=en_US">View
+                            project</a>
                     </div>
-                    <img class="img d-none d-md-block d-none d-md-block" src="/img/projects/qshare.PNG" alt="JS Game">
+                    <img class="img d-none d-md-block d-none d-md-block" src="/img/projects/qshare.PNG" alt="QshaRe">
                 </div>
             </div>
         </div>
