--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <li><a href="https://www.instagram.com/grantmarsh12/" class="text-white">Follow on Instagram</a></li>
               <li><a href="https://www.linkedin.com/in/grant-marsh-a7794615b/" class="text-white">Connect on
                   LinkedIn</a></li>
+              <li><a href="https://github.com/invee123/" class="text-white">Check out my GitHub</a></li>
               <li><a href="mailto:invee123@gmail.com" class="text-white">Email me</a></li>
             </ul>
           </div>
